--- a/src/pages/backend.css
+++ b/src/pages/backend.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .neumorphic-box {
   border-radius: 30px;
   background: #e0e0e0;
@@ -5,6 +9,13 @@
   -17px -17px 38px #ffffff;
   padding: 20px;
 }
+
+/*
+border-radius: 30px;
+background: #dbe0e1;
+box-shadow:  17px 17px 38px #babebf,
+             -17px -17px 38px #fcffff;
+*/
 
 .flex-centered {
   display: flex;
