--- a/src/pages/backend.css
+++ b/src/pages/backend.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 input {
   outline: none;
   padding: 0.2rem;
@@ -9,7 +10,7 @@ input {
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
@@ -20,13 +21,20 @@ select:-webkit-autofill:focus {
   transition: background-color 500s ease-in-out 0s;
 }
 
+@layer base {
+  html {
+    @apply _text-adminBlack;
+  }
+};
+
 @layer components {
   .softShadow {
-    @apply _rounded-lg _py-1 _px-4 _transition-shadow _duration-[1s]; 
+    @apply _rounded-lg _py-1 _px-4 _transition-shadow _duration-[1s];
     box-shadow: 5px 5px 10px #bebebe, -5px -5px 10px #ffffff;
     transition: 0.04s box-shadow ease-in-out;
     background: #e0e0e0
   }
+
   input.softShadow:focus,
   input.softShadow:not(:placeholder-shown),
   .softShadow.active {
