--- a/src/pages/backend.css
+++ b/src/pages/backend.css
@@ -47,3 +47,11 @@ select:-webkit-autofill:focus {
     background: #e0e0e0
   }
 }
+
+@media screen and (max-width: 768px) {
+  /* Medium screens and up */
+  ._grid{
+    display: flex;
+    flex-direction: column ;
+  }
+}
