--- a/src/pages/backend.css
+++ b/src/pages/backend.css
@@ -1,7 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
+@theme {
+  --color-adminBlack: #333333;
+  --color-adminSuperGray: "#777777";
+  --color-adminDarkGray: "#ACACAC";
+  --color-adminGray: "#e0e0e0";
+  --color-adminBlue: "#1432FF";
+  --color-adminRed: "#E84B57";
+}
 
 input {
   outline: none;
@@ -23,13 +29,13 @@ select:-webkit-autofill:focus {
 
 @layer base {
   html {
-    @apply _text-adminBlack;
+    @apply text-adminBlack;
   }
 };
 
 @layer components {
   .softShadow {
-    @apply _rounded-lg _py-1 _px-4 _transition-shadow _duration-[1s];
+    @apply rounded-lg py-1 px-4 transition-shadow duration-[1s];
     box-shadow: 5px 5px 10px #bebebe, -5px -5px 10px #ffffff;
     transition: 0.04s box-shadow ease-in-out;
     background: #e0e0e0
@@ -38,20 +44,12 @@ select:-webkit-autofill:focus {
   input.softShadow:focus,
   input.softShadow:not(:placeholder-shown),
   .softShadow.active {
-    @apply _shadow-[inset_5px_5px_10px_#bebebe,_inset_-5px_-5px_10px_#ffffff];
+    @apply shadow-[inset_5px_5px_10px_#bebebe,inset_-5px_-5px_10px_#ffffff];
   }
 
   .neumorphicShadow {
     box-shadow: 5px 5px 10px #bebebe, -5px -5px 10px #ffffff;
     transition: 0.04s box-shadow ease-in-out;
     background: #e0e0e0
-  }
-}
-
-@media screen and (max-width: 768px) {
-  /* Medium screens and up */
-  ._grid{
-    display: flex;
-    flex-direction: column ;
   }
 }
