--- a/src/app/global.css
+++ b/src/app/global.css
@@ -7,6 +7,7 @@
   --color-adminGray: #e0e0e0;
   --color-adminBlue: #1432FF;
   --color-adminRed: #E84B57;
+  --color-adminGreen: #37cb95;
 }
 
 input {
