--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,8 @@
 
 @theme {
   --color-adminBlack: #333333;
-  --color-adminSuperGray: #777777;
-  --color-adminDarkGray: #ACACAC;
+  --color-adminSuperGray: #cecece;
+  --color-adminDarkGray: #494949;
   --color-adminGray: #e0e0e0;
   --color-adminBlue: #1432FF;
   --color-adminRed: #E84B57;
